# glam-ext

./: Cargo.toml  README.md
src/: isometry3a.rs  lib.rs  macros.rs  transform3a.rs  vec2xz_swizzles.rs
src/f32_ext/: isometry3a.rs  math.rs  mod.rs  transform3a.rs  vec2xz.rs
src/f64_ext/: isometry3a.rs  math.rs  mod.rs  transform3a.rs  vec2xz.rs
src/features/: impl_approx.rs  impl_rkyv.rs  impl_serde.rs  mod.rs
