[package]
name = "glam-ext"
version = "0.3.0"
authors = ["SlimeYummy <zzzcccnnn@outlook.com>"]
edition = "2021"
rust-version = "1.75"
description = "Transform, isometry and more extension types for glam-rs."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/SlimeYummy/glam-ext"
repository = "https://github.com/SlimeYummy/glam-ext"
keywords = ["gamedev", "math", "matrix", "vector", "quaternion"]
categories = ["game-engines", "no-std"]
exclude = ["/.circleci", "/.github"]
resolver = "2"

[features]
default = ["std"]

std = ["glam/std"]
debug-glam-assert = ["glam/debug-glam-assert"]
glam-assert = ["glam/glam-assert"]
scalar-math = ["glam/scalar-math"]
cuda = ["glam/cuda"]
fast-math = ["glam/fast-math"]
core-simd = ["glam/core-simd"]

approx = ["glam/approx"]
bytemuck = ["glam/bytemuck"]
libm = ["dep:libm", "glam/libm"]
mint = ["glam/mint"]
rand = ["glam/rand"]
serde = ["dep:serde", "glam/serde"]
rkyv = ["dep:rkyv", "glam/rkyv"]
bytecheck = ["glam/bytecheck"]

[dependencies]
glam = { version = "0.30", default-features = false }

libm = { version = "0.2", optional = true, default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = [ "serde_derive" ] }
rkyv = { version = "0.8", optional = true, default-features = false }

[dev-dependencies]
# Set a size_xx feature so that this crate compiles properly with --all-targets --all-features
rkyv = { version = "0.8", default-features = false, features = ["alloc"] }
